fix: The link-time conversion function is compatible with UTC0 format

--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LinkItemTitle/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LinkItemTitle/index.less
@@ -81,8 +81,8 @@
     width: 100%;
 
     .titleContent {
-      opacity: 0.6;
       cursor: pointer;
+      opacity: 0.6;
 
       &:hover {
         opacity: 0.4;
@@ -100,6 +100,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        padding-right: 20px;
         font-weight: 600;
         border-bottom: 1px solid rgba(0, 0, 0, 0.1);
       }
@@ -109,11 +110,11 @@
           margin-top: 8px;
           font-size: 14px;
           border: 1px solid rgba(0, 0, 0, 0.1);
-
         }
       }
 
       .bottomInfo {
+        padding-right: 20px;
         text-align: right;
         &::before {
           color: #999;
