fix: When a scroll bar is displayed in a link log, the style is abnormal due to details viewing

--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LinkItemTitle/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LinkItemTitle/index.less
@@ -16,7 +16,6 @@
   }
 
   .header {
-    position: relative;
     display: flex;
     width: 100%;
     padding-left: 4px;
@@ -30,7 +29,6 @@
 
       .progress {
         background: #e6e6e6;
-        // background: rgba(40, 154, 233, 0.08);
       }
     }
 
@@ -41,9 +39,8 @@
     }
 
     .progress {
-      // border-left: 1px solid rgba(0, 0, 0, 0.1);
       position: relative;
-      flex: 1;
+      // flex: 1;
 
       .ticks {
         position: absolute;
