--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/index.less
@@ -1,8 +1,8 @@
 .rawLogListMain {
   flex: 1;
   margin-top: 5px;
-  overflow-y: auto;
   overflow-x: hidden;
+  overflow-y: scroll;
   & > div:not(:last-child) {
     border-bottom: 1px solid hsla(0, 0%, 0%, 0.1);
   }
