--- a/ui/src/pages/Graphics/index.less
+++ b/ui/src/pages/Graphics/index.less
@@ -21,7 +21,8 @@
 
   .tabContent {
     width: 100%;
-    height: calc(100vh - 135px);
+    // height: calc(100vh - 135px);
+    height: 100%;
     background-color: #fff;
   }
 }
