style: Link Style Adjustment

--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LinkItemTitle/ContentItem/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LinkItemTitle/ContentItem/index.less
@@ -42,7 +42,9 @@
 
     .detailsItemKeys {
       width: 200px;
+      overflow: hidden;
       color: #888;
+      text-overflow: ellipsis;
     }
 
     .detailsItemValues {
