feat: Links support more error displays and are compatible with some limiting case style issues

--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LinkItemTitle/ContentItem/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LinkItemTitle/ContentItem/index.less
@@ -50,6 +50,8 @@
     .detailsItemValues {
       flex: 1;
       width: 100%;
+      overflow: hidden;
+      overflow-x: scroll;
       color: rgb(237, 129, 66);
     }
 
