feat: Consider the parameters of the defaultFields field as auto-populated data(V1.1)

--- a/ui/src/pages/DataLogs/components/SearchBar/RawLogQuery/CodeMirrorSearch/index.less
+++ b/ui/src/pages/DataLogs/components/SearchBar/RawLogQuery/CodeMirrorSearch/index.less
@@ -40,5 +40,6 @@
   :global .CodeMirror-placeholder {
     color: #bbb !important;
     font-size: 14px !important;
+    transform: translateY(2px);
   }
 }
