--- a/ui/src/pages/DataLogs/components/SearchBar/RawLogQuery/CodeMirrorSearch/index.less
+++ b/ui/src/pages/DataLogs/components/SearchBar/RawLogQuery/CodeMirrorSearch/index.less
@@ -1,45 +1,105 @@
 .editors {
   position: relative;
+  display: flex;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  border: 1px solid #e8e8e8;
-  border-radius: 8px;
 
-  .editorsDom {
-    font-size: 16px;
-    line-height: 26px;
-  }
-  .editorsErrTxext {
-    position: absolute;
-    bottom: -24px;
-    left: 0;
-    clear: both;
-    min-height: 24px;
-    margin-top: -2px;
-    color: rgba(0, 0, 0, 0.45);
-    font-size: 15px;
-    line-height: 1.5;
-    transition: color 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-  :global(.CodeMirror) {
-    height: auto !important;
-    min-height: 218px !important;
-    max-height: 747px !important;
-  }
-  :global(.CodeMirror-scroll) {
-    height: auto !important;
-    min-height: 218px !important;
-    max-height: 747px !important;
+  .where {
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    color: #bbb;
+    border: 1px solid #e8e8e8;
+    border-radius: 8px 0 0 8px;
   }
 
-  :global(.CodeMirror-gutter-wrapper) {
-    left: -55px !important;
-  }
+  .codemirrorInput {
+    display: flex;
+    width: 100%;
+    padding-left: 10px;
+    overflow: hidden;
+    background-color: #fff;
+    border: 1px solid #e8e8e8;
+    border-radius: 0 8px 8px 0;
 
-  :global .CodeMirror-placeholder {
-    color: #bbb !important;
-    font-size: 14px !important;
-    transform: translateY(2px);
+    &:focus-within {
+      border-color: #fa975a;
+      outline: 0;
+      box-shadow: 0 0 0 2px rgb(238 114 47 / 20%);
+    }
+
+    &:hover {
+      border-color: #fa975a;
+    }
+
+    .editorsDom {
+      width: 100%;
+      height: 100%;
+      overflow-x: scroll;
+      font-size: 16px;
+      line-height: 26px;
+    }
+    .editorsErrTxext {
+      position: absolute;
+      bottom: -24px;
+      left: 0;
+      clear: both;
+      min-height: 24px;
+      margin-top: -2px;
+      color: rgba(0, 0, 0, 0.45);
+      font-size: 15px;
+      line-height: 1.5;
+      transition: color 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+    :global(.CodeMirror) {
+      height: auto !important;
+      min-height: 32px !important;
+      max-height: 32px !important;
+    }
+    :global(.CodeMirror-scroll) {
+      height: auto !important;
+      min-height: 32px !important;
+      max-height: 32px !important;
+      padding-bottom: 0 !important;
+      overflow-x: scroll;
+      overflow-y: hidden;
+      scrollbar-width: none;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+
+      > div:nth-child(2) {
+        display: none;
+      }
+    }
+
+    :global(.CodeMirror-gutter-wrapper) {
+      left: -55px !important;
+    }
+
+    :global .CodeMirror-placeholder {
+      color: #bbb !important;
+      font-size: 14px !important;
+      transform: translateY(2px) translateX(-2px);
+    }
+
+    :global(.CodeMirror-line) {
+      padding: 0;
+      overflow-x: scroll;
+    }
+
+    :global(.CodeMirror-cursor) {
+      top: 2px !important;
+      width: 1px !important;
+      height: 18px !important;
+      background-color: #000 !important;
+    }
+
+    .afterBox {
+      width: 60px;
+      background-color: #fff;
+    }
   }
 }
