--- a/ui/src/pages/DataLogs/components/SearchBar/index.less
+++ b/ui/src/pages/DataLogs/components/SearchBar/index.less
@@ -2,11 +2,12 @@
   position: relative;
   display: flex;
   flex: 1;
+  width: calc(100% - 40px);
   margin-right: 8px;
   .inputBox {
     flex: 1;
     height: 32px;
-    padding-right: 8px;
+    overflow: hidden;
   }
 
   .editor {
@@ -39,8 +40,8 @@
       }
     }
     .searchBtn {
-      margin-left: 8px;
       margin-bottom: 9px;
+      margin-left: 8px;
     }
   }
 }
