--- a/ui/src/pages/DataLogs/components/SearchBar/RawLogQuery/CodeMirrorSearch/index.less
+++ b/ui/src/pages/DataLogs/components/SearchBar/RawLogQuery/CodeMirrorSearch/index.less
@@ -37,6 +37,7 @@
       width: 100%;
       height: 100%;
       overflow-x: scroll;
+      overflow-y: hidden;
       font-size: 16px;
       line-height: 26px;
     }
