style: Remove excess borders

--- a/ui/src/pages/DataLogs/components/SearchBar/RawLogQuery/CodeMirrorSearch/index.less
+++ b/ui/src/pages/DataLogs/components/SearchBar/RawLogQuery/CodeMirrorSearch/index.less
@@ -11,6 +11,7 @@
     padding: 0 10px;
     color: #bbb;
     border: 1px solid #e8e8e8;
+    border-right: none;
     border-radius: 8px 0 0 8px;
   }
 
