--- a/ui/src/pages/DataLogs/components/SearchBar/index.less
+++ b/ui/src/pages/DataLogs/components/SearchBar/index.less
@@ -16,6 +16,18 @@
     overflow: hidden;
     border: 1px solid #d9d9d9;
     border-radius: 8px;
+
+    .editorsDom {
+      width: 100%;
+      height: 250px;
+
+      :global(.CodeMirror) {
+        // height: auto !important;
+        // min-height: 250px !important;
+        // max-height: 250px !important;
+        height: 250px !important;
+      }
+    }
   }
 
   .btnList {
