--- a/ui/src/pages/Alarm/Rules/components/FormAlarmDraw/QueryStatisticsItem/index.less
+++ b/ui/src/pages/Alarm/Rules/components/FormAlarmDraw/QueryStatisticsItem/index.less
@@ -1,13 +1,15 @@
 .formLine {
   display: flex;
   flex-wrap: wrap;
+  margin-right: 10px;
+  padding-left: 15px;
   background: linear-gradient(white, white) padding-box,
     repeating-linear-gradient(-45deg, #ccc 0, #ccc 0.5em, white 0, white 1em);
   border: 1px solid transparent;
   border-radius: 4px;
   .item {
     width: 100%;
-    margin-bottom: 24px;
+    margin-bottom: 20px;
     .title {
       display: flex;
       justify-content: space-around;
