--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LinkItemTitle/ContentItem/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LinkItemTitle/ContentItem/index.less
@@ -51,7 +51,7 @@
       flex: 1;
       width: 100%;
       overflow: hidden;
-      overflow-x: scroll;
+      overflow-x: auto;
       color: rgb(237, 129, 66);
     }
 
