--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LinkItemTitle/ProgressBar/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LinkItemTitle/ProgressBar/index.less
@@ -34,9 +34,9 @@
   .errorLine {
     position: absolute;
     top: 50%;
-    line-height: 11px;
-    height: 16px;
-    transform: translateY(-50%);
     z-index: 11;
+    height: 16px;
+    line-height: 11px;
+    transform: translateX(-50%) translateY(-50%);
   }
 }
