fix: Adjust button position and size

--- a/ui/src/pages/DataLogs/components/SearchBar/RawLogQuery/CodeMirrorSearch/WhereBox/index.less
+++ b/ui/src/pages/DataLogs/components/SearchBar/RawLogQuery/CodeMirrorSearch/WhereBox/index.less
@@ -10,7 +10,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 30px;
+    // width: 30px;
+    width: 40px;
     height: 30px;
     overflow: hidden;
     cursor: pointer;
