style(dataAnalysis): sql editor space adjustment

--- a/ui/src/pages/DataAnalysis/TemporaryQuery/components/FolderTree/index.less
+++ b/ui/src/pages/DataAnalysis/TemporaryQuery/components/FolderTree/index.less
@@ -27,13 +27,14 @@
   }
 
   :global .ant-tree .ant-tree-node-content-wrapper {
+    display: flex;
     line-height: 22px;
   }
 
   :global .ant-tree-title {
-    width: 100%;
     display: flex;
     align-items: center;
+    width: 100%;
   }
 
   :global .ant-tree-node-content-wrapper-normal {
