--- a/ui/src/pages/DataAnalysis/TemporaryQuery/index.less
+++ b/ui/src/pages/DataAnalysis/TemporaryQuery/index.less
@@ -87,10 +87,10 @@
 
     .luckysheet {
       position: relative;
-      top: calc(-40vh + 32px + 32px);
-      width: calc(100% - 32px);
-      height: calc(40vh - 32px - 32px);
+      top: calc(-100vh + 436px);
       z-index: 10;
+      width: calc(100% - 32px);
+      height: calc(100vh - 436px);
     }
 
     .empty {
