--- a/ui/src/pages/DataAnalysis/OfflineManager/index.less
+++ b/ui/src/pages/DataAnalysis/OfflineManager/index.less
@@ -18,8 +18,8 @@
       display: flex;
       flex: 1;
       flex-direction: column;
-      min-height: 0;
       width: 299px;
+      min-height: 0;
       .navTitle {
         display: flex;
         align-items: center;
@@ -58,8 +58,8 @@
         flex: 1;
         min-width: 0;
         min-height: 0;
-        overflow-y: auto;
         overflow-x: hidden;
+        overflow-y: auto;
       }
     }
   }
@@ -84,18 +84,18 @@
 
     .luckysheet {
       position: relative;
-      top: calc(-40vh + 32px + 32px);
+      top: calc(-100vh + 436px);
       z-index: 10;
       width: calc(100% - 32px);
-      height: calc(40vh - 32px - 32px);
+      height: calc(100vh - 436px);
     }
 
     .empty {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       width: 100%;
       height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
 
     :global .ant-tabs-card > .ant-tabs-nav .ant-tabs-tab {
