--- a/ui/src/pages/DataAnalysis/components/SQLEditor/index.less
+++ b/ui/src/pages/DataAnalysis/components/SQLEditor/index.less
@@ -8,14 +8,13 @@
   border-left: 1px solid @border-color;
 
   .context {
-    flex: 1;
-    height: 100%;
+    height: 200px;
     background-color: #ccc;
   }
 
   .sqlResult {
     position: relative;
-    height: 40vh;
+    flex: 1;
 
     .title {
       position: relative;
@@ -28,13 +27,16 @@
         position: absolute;
         top: 50%;
         left: 8px;
-        transform: translateY(-50%);
         color: @primary-color;
+        transform: translateY(-50%);
       }
     }
 
     .resultTabs {
       :global .ant-tabs {
+        &:nth-child(1) {
+          margin-left: 20px;
+        }
         .ant-tabs-tab {
           padding: 5px 0;
         }
