style(dataAnalysis): Button adjustment

--- a/ui/src/pages/DataAnalysis/TemporaryQuery/index.less
+++ b/ui/src/pages/DataAnalysis/TemporaryQuery/index.less
@@ -87,10 +87,11 @@
 
     .luckysheet {
       position: relative;
-      top: calc(-100vh + 436px);
+      top: calc(-70vh + 202px);
+      left: 32px;
       z-index: 10;
-      width: calc(100% - 32px);
-      height: calc(100vh - 436px);
+      width: calc(100% - 64px);
+      height: calc(70vh - 202px);
     }
 
     .empty {
