feat(datalogs): filter Added Whether to enable the function #715

--- a/ui/src/pages/DataLogs/components/QueryResult/FilterList/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/FilterList/index.less
@@ -21,9 +21,16 @@
         left: -7px;
         width: 4px;
         height: 21px;
-        background-color: #ccc;
+        background-color: #f5af88;
         border-radius: 2px 0 0 2px;
         content: "";
+      }
+    }
+
+    .ignore {
+      text-decoration: line-through;
+      &::before {
+        background-color: #ccc;
       }
     }
   }
