--- a/ui/src/pages/DataLogs/components/SearchBar/RawLogQuery/CodeMirrorSearch/WhereBox/index.less
+++ b/ui/src/pages/DataLogs/components/SearchBar/RawLogQuery/CodeMirrorSearch/WhereBox/index.less
@@ -15,9 +15,9 @@
     height: 30px;
     overflow: hidden;
     cursor: pointer;
-    &:hover {
-      background-color: #f1693533;
-    }
+    // &:hover {
+    //   background-color: #f1693533;
+    // }
     &:nth-child(1) {
       border-right: 1px solid #e5e4e5;
       border-radius: 8px 0 0 8px;
