--- a/ui/src/pages/DataLogs/components/SearchBar/index.less
+++ b/ui/src/pages/DataLogs/components/SearchBar/index.less
@@ -5,9 +5,9 @@
   width: calc(100% - 40px);
   margin-right: 8px;
   .inputBox {
+    z-index: 1;
     flex: 1;
     height: 32px;
-    overflow: hidden;
   }
 
   .editor {
