feat: Task Execution details Added Status filtering Fixes an issue where the front end always displays the first page after paging switchover

--- a/ui/src/pages/DataAnalysis/TaskExecutionDetails/TaskFilter/index.less
+++ b/ui/src/pages/DataAnalysis/TaskExecutionDetails/TaskFilter/index.less
@@ -1,7 +1,8 @@
 .taskFilter {
   display: flex;
   align-items: center;
-  padding-left: 17px;
+  padding-left: 10px;
+  overflow-x: auto;
   font-size: 14px;
   line-height: 50px;
 }
