--- a/ui/src/pages/DataLogs/components/SearchBar/RawLogQuery/CodeMirrorSearch/index.less
+++ b/ui/src/pages/DataLogs/components/SearchBar/RawLogQuery/CodeMirrorSearch/index.less
@@ -3,13 +3,10 @@
   display: flex;
   width: 100%;
   height: 100%;
-  // overflow: hidden;
 
   .codemirrorInput {
     display: flex;
     width: 100%;
-    // padding-left: 10px;
-    // overflow: hidden;
     background-color: #fff;
     border: 1px solid #e8e8e8;
     border-radius: 0 8px 8px 0;
@@ -35,6 +32,7 @@
   overflow: hidden;
 
   .codemirrorInput {
+    padding-right: 60px;
     padding-left: 10px;
     &:focus-within {
       border-color: #fa975a;
@@ -120,7 +118,6 @@
 
 :global(.autocomplete-text) {
   flex: 1;
-  // width: calc(100% - 100px);
   padding: 0 15px 0 10px;
   overflow: hidden;
   font-weight: 700;
@@ -130,7 +127,6 @@
 
 :global(.autocomplete-collectionText) {
   flex: 1;
-  // width: calc(100% - 100px);
   padding: 0 15px 0 10px;
   overflow: hidden;
   color: #2fabee;
