docs: Add refresh prompt

--- a/ui/src/pages/document.ejs
+++ b/ui/src/pages/document.ejs
@@ -29,8 +29,17 @@
       >
           <img style='height: 100px;width: 100px;' src="<%= context.config.publicPath + 'cv.png'%>" />
           <div><span>ClickVisual</span></div>
+          <div style="
+                 display: flex;
+                 flex-direction: column;
+                 align-items: center;
+                 justify-content: center;
+                 font-size: 10px;
+                 font-weight: lighter;
+               ">Manually refresh the page to update static resources. Press F5</div>
       </div>
     </div>
+
     <!-- Luckysheet -->
     <link rel='stylesheet' href="<%= context.config.publicPath + 'luckysheet/css/pluginsCss.css'%>" />
     <link rel='stylesheet' href="<%= context.config.publicPath + 'luckysheet/css/plugins.css'%>" />
