feat: When Filter logs are used, value is written to the field according to the type #836

--- a/ui/src/pages/DataLogs/components/CreateLogFilter/index.less
+++ b/ui/src/pages/DataLogs/components/CreateLogFilter/index.less
@@ -22,6 +22,9 @@
 }
 
 .title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   font-weight: 600;
   line-height: 28px;
 }
