--- a/ui/src/pages/Alarm/Rules/components/FormAlarmDraw/QueryStatisticsItem/CreatedAndUpdatedModal/index.less
+++ b/ui/src/pages/Alarm/Rules/components/FormAlarmDraw/QueryStatisticsItem/CreatedAndUpdatedModal/index.less
@@ -13,6 +13,9 @@
 
     :global(.CodeMirror) {
       height: 250px !important;
+      :global(.CodeMirror-gutters) {
+        left: 0 !important;
+      }
     }
   }
 }
