--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/index.less
@@ -2,6 +2,7 @@
   display: flex;
   flex: 0 0 200px;
   flex-direction: column;
+  width: 200px;
   margin-right: 10px;
   background: hsla(0, 0%, 92%, 0.3);
 }
