feat: Analysis field module readjusted

--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/index.less
@@ -1,6 +1,6 @@
 .logsIndexMain {
   display: flex;
-  flex: 0 0 200px;
+  flex: 1;
   flex-direction: column;
   width: 200px;
   margin-right: 10px;
