--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/IndexHeader/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/IndexHeader/index.less
@@ -1,17 +1,32 @@
 .indexHeaderMain {
+  position: relative;
   display: flex;
   flex: 0 0 28px;
   align-items: center;
   justify-content: space-between;
   padding: 5px;
+
   .title {
     font-weight: bold;
     font-size: 14px;
     user-select: none;
   }
   .icon {
+    height: 25px;
     font-size: 16px;
     cursor: pointer;
-    height: 25px;
+  }
+}
+
+.whiteStripe {
+  position: relative;
+  ::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: #f9f9f9;
+    content: "";
   }
 }
