--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/IndexList/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/IndexList/index.less
@@ -4,8 +4,9 @@
   flex: 1;
   justify-content: center;
   min-width: 0;
+  // max-height: 50%;
   margin: 0 0 5px 0;
-  overflow-y: auto;
+  overflow-y: hidden;
   :global(.ant-collapse > .ant-collapse-item > .ant-collapse-header) {
     padding: 2px 6px;
   }
@@ -61,6 +62,42 @@
   flex: none;
 }
 
-.borderTop {
-  border-top: 1px solid @border-color;
+.whiteStripe {
+  position: relative;
+  > ::before {
+    position: absolute;
+    top: -2px;
+    left: 0;
+    width: 100%;
+    height: 6px;
+    background-color: #f9f9f9;
+    content: "";
+  }
+}
+
+.fiveFiveOpen {
+  :global(.ant-collapse-content) {
+    height: calc((100vh - 265px) / 2);
+    overflow-x: hidden;
+    overflow-y: auto;
+    transition: all 0.5s;
+  }
+}
+
+.zero {
+  :global(.ant-collapse-content) {
+    height: 100px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transition: all 0.5s;
+  }
+}
+
+.nine {
+  :global(.ant-collapse-content) {
+    height: calc(100vh - 260px);
+    overflow-x: hidden;
+    overflow-y: auto;
+    transition: all 0.5s;
+  }
 }
