--- a/ui/src/pages/DataLogs/components/QueryResult/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/index.less
@@ -15,6 +15,12 @@
     min-width: 0;
     min-height: 0;
 
+    .indexList {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
+
     .queryDetail {
       display: flex;
       flex: 1;
