--- a/ui/src/pages/DataLogs/styles/index.less
+++ b/ui/src/pages/DataLogs/styles/index.less
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100%;
   padding: 10px;
+  border-radius: 8px;
 }
 .siteDrawerInCurrentWrapper {
   background: hsl(0, 0, 98%);
