fix: Data analysis style bug

--- a/ui/src/pages/DataAnalysis/components/SQLEditor/index.less
+++ b/ui/src/pages/DataAnalysis/components/SQLEditor/index.less
@@ -3,7 +3,8 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  height: calc(100vh - 137px);
+  width: 500px; // 很奇怪  设置了width后flex=1才生效
+  height: calc(100vh - 152px);
   color: hsl(0, 0%, 58%);
   border-left: 1px solid @border-color;
 
