--- a/ui/src/pages/Alarm/Rules/components/FormAlarmDraw/QueryStatisticsItem/CreatedAndUpdatedModal/index.less
+++ b/ui/src/pages/Alarm/Rules/components/FormAlarmDraw/QueryStatisticsItem/CreatedAndUpdatedModal/index.less
@@ -13,6 +13,7 @@
 
     :global(.CodeMirror) {
       height: 250px !important;
+
       :global(.CodeMirror-gutters) {
         left: 0 !important;
       }
@@ -23,4 +24,8 @@
 :global(.CodeMirror-hints) {
   z-index: 1000 !important;
   width: 500px !important;
+}
+
+:global(.CodeMirror-gutter-wrapper) {
+  left: -30px !important;
 }
