style: header width

--- a/ui/src/global.less
+++ b/ui/src/global.less
@@ -90,8 +90,8 @@ ol {
 /**
   antd 5重置样式
 */
-:where(.css-dev-only-do-not-override-11zu8kq).ant-pro-top-nav-header-wide {
-  max-width: none;
+.ant-pro-top-nav-header-wide {
+  max-width: none !important;
 }
 
 body {
