fix: the search field is not fully displayed

--- a/ui/src/pages/DataLogs/components/SearchBar/RawLogQuery/CodeMirrorSearch/index.less
+++ b/ui/src/pages/DataLogs/components/SearchBar/RawLogQuery/CodeMirrorSearch/index.less
@@ -68,7 +68,7 @@
       padding-bottom: 0 !important;
       overflow-y: hidden;
       scrollbar-width: none;
-
+      width: calc(100%);
       &::-webkit-scrollbar {
         display: none;
       }
