fix: front-end optimization #992
Signed-off-by: kl7sn <mex7.0828@gmail.com>

--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/IndexList/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/IndexList/index.less
@@ -10,6 +10,9 @@
   :global(.ant-collapse > .ant-collapse-item > .ant-collapse-header) {
     padding: 2px 6px;
   }
+  :global(.ant-collapse > .ant-collapse-item > .ant-collapse-content)  {
+    height:100%;
+   }
   :global(.ant-collapse-content-box) {
     padding: 0 2px !important;
     & ul {
