fix: base field adaptive height #1003 #992
Signed-off-by: kl7sn <mex7.0828@gmail.com>

--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/IndexList/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/IndexList/index.less
@@ -4,7 +4,7 @@
   flex: 1;
   justify-content: center;
   min-width: 0;
-  max-height: auto;
+//   max-height: auto;
   margin: 0 0 5px 0;
   overflow-y: hidden;
   :global(.ant-collapse > .ant-collapse-item > .ant-collapse-header) {
